ProjetCompil/Gencode/Test/success/src/stackTest.cas
program
	A: array[1..4] of integer;
	
begin
	A[3] := (1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1))))))))))))))))))))))))))))))))))))))));
	
end.