ProjetCompil/Gencode/Test/fail/src/borneTab.cas
program
    T : array[1..5] of REAL ; -- Ok
begin
    T[0] := 0 ;
end.